Add unordered list

--- a/pet.html
+++ b/pet.html
@@ -5,7 +5,11 @@
 </head>
 <body>
     <p>These are their favorite toys</p>
-   
+    <ul>
+        <li>Strings</li>
+        <li>balls</li>
+        <li>squishy duck</li>
+    </ul>
     
 </body>
 </html>
