Add ordered list

--- a/pet.html
+++ b/pet.html
@@ -11,6 +11,11 @@
         <li>squishy duck</li>
     </ul>
     <p>This is what they like doing</p>
+    <ol>
+        <li>Going for a walk</li>
+        <li>Playing around for excercise</li>
+        <li>Feeding</li>
+    </ol>
     
 </body>
 </html>
